deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forestfire-app
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: forestfire-app
  template:
    metadata:
      labels:
        app: forestfire-app
    spec:
      containers:
      - name: forestfire-app
        image: wigsicle/forestfire:92dcc19
        ports:
        - containerPort: 8000
          name: web
